# Rust-is-hard

./: Cargo.toml  Makefile  README.md  lib.rs  memory.x
.cargo/: config.toml
builds/: out.uf2
output/: out.uf2
src/: defmt.rs  lib.rs  main.rs  panic.rs  timer.rs  usb.rs
