[package]
name = "testing"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata]
chip = "ATSAMD21G18A"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", optional = true }

atsamd-hal = { version = "0.23.3", default-features = false}

usb-device = { version ="0.3.2", optional = true }
usbd-serial ={ version = "0.2.2", optional = true }

embassy-executor = { version = "0.10.0", optional = true, features = ["platform-cortex-m", "executor-thread", "defmt"] }
defmt = { version = "1.1.0"}
portable-atomic = "1.13.1"
bmp390 = "0.4.3"
uom = { version = "0.36", default-features = false, features = ["f32", "si"] }

[features]
default = ["rt", "usb", "async", "atsamd-hal/samd21g"]
rt = ["dep:cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "dep:usb-device", "dep:usbd-serial",]
async = ["atsamd-hal/async", "dep:embassy-executor"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = true
